added start and stop gcode commands

--- a/test/fullscale_tests/test_additive/additive_gcode.yaml
+++ b/test/fullscale_tests/test_additive/additive_gcode.yaml
@@ -15,6 +15,8 @@ PeriLab:
       dy: 1.0
       Width: 0.4
       Scale: 1.0
+      Start Command: "TYPE:Solid infill,TYPE:Perimeter"
+      Stop Command: "TYPE:Custom,TYPE:Skirt/Brim"
       Blocks:
         2: "x < 75"
         3: "x > 175"
