--- a/test/fullscale_tests/test_penalty_contact/penalty_contact_options.yaml
+++ b/test/fullscale_tests/test_penalty_contact/penalty_contact_options.yaml
@@ -32,8 +32,8 @@ PeriLab:
         Poisson's Ratio: 0.33
   Contact:
     Globals:
-      Global Search Frequency: 1
-      Only Surface Contact Nodes: true
+      Global Search Frequency: 2
+      Only Surface Contact Nodes: false
     Contact_1:
       Type: "Penalty Contact"
       Contact Radius: 0.005
@@ -42,7 +42,7 @@ PeriLab:
         Group 1:
           Master Block ID: 2
           Slave Block ID: 1
-          Search Radius: 0.005
+          Search Radius: 0.02
   Blocks:
     block_1:
       Block ID: 1
@@ -70,13 +70,13 @@ PeriLab:
   Solver:
     Material Models: True
     Initial Time: 0.0
-    Final Time: 2.14521e-07
+    Final Time: 2.14521e-05
     Verlet:
       Safety Factor: 0.9
   Outputs:
     Output1:
-      Output Filename: "penalty_contact"
-      Output Frequency: 1
+      Output Filename: "penalty_contact_options"
+      Output Frequency: 50
       Output Variables:
         Displacements: True
         Forces: True
