added Only Surface Contact Nodes

--- a/examples/Disk_impact/Disk_impact.yaml
+++ b/examples/Disk_impact/Disk_impact.yaml
@@ -53,6 +53,8 @@ PeriLab:
       Horizon: 0.0031
       Density: 7700.0
   Contact:
+    Globals:
+      Only Surface Contact Nodes: false
     Contact_1:
       Type: "Penalty Contact"
       Contact Radius: 0.000775
