--- a/Project.toml
+++ b/Project.toml
@@ -28,6 +28,7 @@ Meshes = "eacbb407-ea5a-433e-ab97-5258b1ca43fa"
 NLsolve = "2774e3e8-f4cf-5e23-947b-6d7e65073b56"
 NearestNeighbors = "b8a86587-4115-5ab1-83bc-aa920d37bbce"
 OrderedCollections = "bac558e1-5e72-5ebc-8fee-abe8a469f55d"
+Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
 Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
 PointNeighbors = "1c4d5385-0a27-49de-8e2c-43b175c8985c"
 Polyhedra = "67491407-f73d-577b-9b50-8179a7c68029"
@@ -71,6 +72,7 @@ Meshes = "0.51, 0.53, 0.54"
 NLsolve = "4.5"
 NearestNeighbors = "0.4"
 OrderedCollections = "1"
+Parameters = "0.12.3"
 Pkg = "1"
 PointNeighbors = "0.4, 0.5, 0.6"
 Polyhedra = "0.8.1"
