--- a/Project.toml
+++ b/Project.toml
@@ -74,7 +74,7 @@ OrderedCollections = "1"
 Pkg = "1"
 PointNeighbors = "0.4, 0.5, 0.6"
 Polyhedra = "0.8.1"
-PrettyTables = "2"
+PrettyTables = "2, 3"
 Printf = "1"
 ProgressBars = "1"
 Random = "1"
