--- a/Project.toml
+++ b/Project.toml
@@ -36,6 +36,7 @@ Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 ProgressBars = "49802e3a-d2f1-5c88-81d8-b72133a6f568"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Rotations = "6038ab10-8711-5258-84ad-4b1120ba62dc"
+SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 StyledStrings = "f489334b-da3d-4c2e-b8f0-e476e12c162b"
@@ -78,6 +79,7 @@ Printf = "1"
 ProgressBars = "1"
 Random = "1"
 Rotations = "1"
+SparseArrays = "1.11.0"
 StaticArrays = "1"
 Statistics = "1"
 StyledStrings = "1"
