--- a/test/fullscale_tests/test_linear_static_matrix_based_solver/linear_static_matrix_based_solver_2D.yaml
+++ b/test/fullscale_tests/test_linear_static_matrix_based_solver/linear_static_matrix_based_solver_2D.yaml
@@ -60,6 +60,7 @@ PeriLab:
   Solver:
     Initial Time: 0.0
     Final Time: 5.0e-6
+    Number of Steps: 10
     Linear Static Matrix Based:
       Safety Factor: 1.0
   Outputs:
