--- a/test/fullscale_tests/test_linear_static_matrix_based_solver/linear_static_matrix_based_solver_DCBmodel.yaml
+++ b/test/fullscale_tests/test_linear_static_matrix_based_solver/linear_static_matrix_based_solver_DCBmodel.yaml
@@ -9,11 +9,13 @@ PeriLab:
       Density: 1.95e-06
       Horizon: 0.82
       Material Model: Aluminium
+      Damage Model: Damage
     block_2:
       Block ID: 2
       Density: 1.95e-06
       Horizon: 0.82
       Material Model: Aluminium
+      Damage Model: Damage
     block_3:
       Block ID: 3
       Density: 1.95e-06
@@ -83,6 +85,10 @@ PeriLab:
         Strain: True
         Cauchy Stress: True
   Models:
+    Damage Models:
+      Damage:
+        Damage Model: Critical Energy
+        Critical Value: 0.0035714285714285716
     Material Models:
       Aluminium:
         Material Model: "Correspondence Elastic"
@@ -98,11 +104,12 @@ PeriLab:
   Solver:
     Final Time: 1.0
     Initial Time: 0.0
-    Number of Steps: 1
+    Number of Steps: 10
     Material Models: true
-    Damage Models: false
+    Damage Models: true
     Linear Static Matrix Based:
       Safety Factor: 1.0
+      Number of Steps: 100
     #Verlet:
     #  Safety Factor: 0.9
     #  Numerical Damping: 5.0e-06
