--- a/Project.toml
+++ b/Project.toml
@@ -55,7 +55,7 @@ DataFrames = "1"
 DataStructures = "0.18, 0.19"
 Dates = "1"
 Dierckx = "0.5"
-Exodus = "0.13"
+Exodus = "0.13, 0.14"
 FastGaussQuadrature = "1"
 JSON3 = "1"
 LazyGrids = "1"
@@ -66,14 +66,14 @@ LoggingExtras = "1"
 LoopVectorization = "0.12"
 MPI = "0.20"
 MPIPreferences = "0.1"
-Meshes = "0.51, 0.53, 0.54"
+Meshes = "0.51, 0.53, 0.54, 0.55"
 NLsolve = "4.5"
 NearestNeighbors = "0.4"
 OrderedCollections = "1"
 Pkg = "1"
 PointNeighbors = "0.4, 0.5, 0.6"
 Polyhedra = "0.8.1"
-PrettyTables = "2"
+PrettyTables = "3"
 Printf = "1"
 ProgressBars = "1"
 Random = "1"
