--- a/Project.toml
+++ b/Project.toml
@@ -55,7 +55,7 @@ DataFrames = "1"
 DataStructures = "0.18, 0.19"
 Dates = "1"
 Dierckx = "0.5"
-Exodus = "0.13, 0.14"
+Exodus = "0.14"
 FastGaussQuadrature = "1"
 JSON3 = "1"
 LazyGrids = "1"
