--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -34,7 +34,7 @@ jobs:
       fail-fast: false
       matrix:
         # We test quite a lot of versions because we do some OS and version specific things unfortunately
-        julia-version: ["1.10", "1.11", "1.12"]
+        julia-version: ["1.11", "1.12"]
         os: [ubuntu-latest]
 
     steps:
