--- a/test/fullscale_tests/test_linear_static_matrix_based_solver/linear_static_matrix_based_solver_DCBmodel.yaml
+++ b/test/fullscale_tests/test_linear_static_matrix_based_solver/linear_static_matrix_based_solver_DCBmodel.yaml
@@ -39,6 +39,18 @@ PeriLab:
       Variable: Displacements
       Value: -4.4*t
       Type: Dirichlet
+    BC_3:
+      Coordinate: x
+      Node Set: Node Set 1
+      Variable: Displacements
+      Value: 0
+      Type: Dirichlet
+    BC_4:
+      Coordinate: x
+      Node Set: Node Set 2
+      Variable: Displacements
+      Value: 0
+      Type: Dirichlet
   Compute Class Parameters:
     External_Forces:
       Compute Class: Block_Data
@@ -73,7 +85,7 @@ PeriLab:
   Outputs:
     Output1:
       Output Frequency: 1
-      Output Filename: linear_static_matrix_based_solver_DCBmodel
+      Output Filename: linear_static_matrix_based_solver_DCBmodel_verlet_reduced
       Output File Type: Exodus
       Output Variables:
         Damage: true
@@ -104,13 +116,15 @@ PeriLab:
   Solver:
     Final Time: 0.0002
     Initial Time: 0.0
-    Number of Steps: 2
+    Number of Steps: 200
     Material Models: true
     Damage Models: true
-    Linear Static Matrix Based:
+    Verlet Matrix Based:
       Safety Factor: 1.0
-
-    #Verlet:
-    #  Safety Factor: 0.9
-    #  Numerical Damping: 5.0e-06
+      Model Reduction:
+        Type: Static Condensation
+#
+#Verlet:
+#  Safety Factor: 0.9
+#  Numerical Damping: 5.0e-06
 #
