--- a/test/fullscale_tests/test_model_reduction_Verlet_matrix/verlet_reduced_3D.yaml
+++ b/test/fullscale_tests/test_model_reduction_Verlet_matrix/verlet_reduced_3D.yaml
@@ -45,15 +45,15 @@ PeriLab:
       Value: 0
       Type: Dirichlet
   Discretization:
-    Input Mesh File: mesh_2d.txt
+    Input Mesh File: mesh_3d.txt
     Node Sets:
-      Node Set 1: nset_1_2d.txt
-      Node Set 2: nset_2_2d.txt
+      Node Set 1: nset_1_3d.txt
+      Node Set 2: nset_2_3d.txt
     Type: Text File
   Outputs:
     Output1:
       Output Frequency: 10
-      Output Filename: verlet_full_PD
+      Output Filename: verlet_reduced_3D
       Output File Type: Exodus
       Output Variables:
         Displacements: true
@@ -78,14 +78,8 @@ PeriLab:
     Initial Time: 0.0
     Number of Steps: 178
     Material Models: true
-    Damage Models: true
-    Verlet:
+    Verlet Matrix Based:
       Safety Factor: 1.0
-
-      # Model Reduction:
-      #   Type: Static Condensation
-      #   Reduction Blocks: 1 2 3
-#Verlet:
-#  Safety Factor: 0.9
-#  Numerical Damping: 5.0e-06
-#
+      Model Reduction:
+        Type: Static Condensation
+        Reduction Blocks: 2 3
