--- a/test/fullscale_tests/test_linear_static_matrix_based_solver/linear_static_matrix_based_thermal_expansion.yaml
+++ b/test/fullscale_tests/test_linear_static_matrix_based_solver/linear_static_matrix_based_thermal_expansion.yaml
@@ -76,6 +76,7 @@ PeriLab:
         Specific Volume: true
         Volume: true
         Strain: true
+        Forces: true
   Solver:
     Additive Models: false
     Final Time: 1
