--- a/test/fullscale_tests/test_linear_static_matrix_based_solver/linear_static_matrix_based_shear.yaml
+++ b/test/fullscale_tests/test_linear_static_matrix_based_solver/linear_static_matrix_based_shear.yaml
@@ -64,6 +64,7 @@ PeriLab:
         Specific Volume: true
         Volume: true
         Strain: true
+        Forces: true
   Solver:
     Final Time: 1
     Initial Time: 0.0
