--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,19 +13,16 @@ repos:
       - id: check-yaml
       - id: end-of-file-fixer
       - id: trailing-whitespace
-  - repo: local
+  - repo: "https://github.com/domluna/JuliaFormatter.jl"
+    rev: "v2.3.0"
     hooks:
-      # - id: runtests_julia
-      #   name: "runtests_julia"
-      #   entry: pre_commit_hooks/runtests.sh
-      #   files: '\.(jl|JL)$'
-      #   verbose: true
-      #   language: "script"
-      #   description: "Runs julia tests"
-      - id: format_julia
-        name: "format_julia"
-        entry: pre_commit_hooks/format.sh
-        files: '\.(jl|JL)$'
-        verbose: true
-        language: "script"
-        description: "Reformats Julia code"
+      - id: "julia-formatter"
+  #- repo: local
+  #hooks:
+  # - id: runtests_julia
+  #   name: "runtests_julia"
+  #   entry: pre_commit_hooks/runtests.sh
+  #   files: '\.(jl|JL)$'
+  #   verbose: true
+  #   language: "script"
+  #   description: "Runs julia tests"
