--- a/test/fullscale_tests/test_3D_aniso_material/3D_anisomat.yaml
+++ b/test/fullscale_tests/test_3D_aniso_material/3D_anisomat.yaml
@@ -88,7 +88,7 @@ PeriLab:
   Outputs:
     Output1:
       Output Frequency: 1
-      Output Filename: 3D_aniso
+      Output Filename: 3D_anisomat
       Output File Type: Exodus
       Output Variables:
         Displacements: true
